--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  /* margin: 0 auto; */
+  display: flex;
+  flex-flow: row wrap;
+  flex: 1;
+  justify-content: flex-end;
+  align-items: flex-end;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 98vw;
 }
 
 code {
